pico_display: update st7789-spi for latest changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ option(PLATFORM_LINUX "Linux target platform" OFF)
 
 # pico options
 option(PICO_DISPLAY_ST7789_PIO "Pico ST7789 display driver (pio)" ON)
-option(PICO_DISPLAY_ST7789_SPI "Pico ST7789 display driver (spi)" OFF)
+option(PICO_DISPLAY_ST7789_SPI "Pico ST7789 display driver (spi, slow)" OFF)
 option(PICO_DISPLAY_SSD1306 "Pico SSD1306 display driver (debug)" OFF)
 
 if (NOT PLATFORM_LINUX)
